test/scc/ext/tm/semantic-errors/020.t
void test()
{
    void(*a)() _Transaction_safe;
    void(*b)();
    a = b;
}